LM CSS, fix alignment, see: #33215

--- a/Services/COPage/css/content.less
+++ b/Services/COPage/css/content.less
@@ -653,8 +653,6 @@ div.ilc_page_cont_PageContainer
 
 div.ilc_page_frame_PageFrame
 {
-	padding-right: 15px;
-	padding-left: 15px;
 	color: #2e3c50;
 }
 
